# patchman-engine

./: .gitignore  .gitmodules  .golangci.yml  .snyk  .sourcery.yaml  .travis.yml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.centos  Dockerfile.rhel8  Dockerfile.test  Jenkinsfile  Jenkinsfile-smoke.groovy  Makefile  README.md  VERSION  aaa  build_deploy.sh  codecov.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.workspace-backfill.yml  docker-compose.yml  go.mod  go.sum  main.go  pr_check.sh  renovate.json  sonar-project.properties  upgrade.sh
.github/: CODEOWNERS
.tekton/: patchman-engine-pull-request.yaml  patchman-engine-push.yaml  patchman-engine-sc-pull-request.yaml  patchman-engine-sc-push.yaml
aggregator/: aggregator.go  events.go  notifications.go
apache-benchmark/: Dockerfile
base/: base.go  base_test.go  errors.go
conf/: admin_api.env  aggregator.env  cdappconfig.json  common.env  database.env  database_admin.env  evaluator.env  evaluator_common.env  evaluator_recalc.env  evaluator_upload.env  evaluator_user_evaluation.env  gorun.env  kafka.env  listener.env  local.env  manager.env  platform.env  test.env  vmaas_sync.env  workspace_backfill.env  zookeeper.env
dashboards/: grafana-dashboard-insights-patchman-engine-general.configmap.yaml  grafana-json-to-yaml.sh
data/: .gitignore
database/: 99-init_schema.sh  Dockerfile  Dockerfile.centos  (+15 more)
prototypes/rust/: Cargo.toml  Dockerfile
prototypes/rust/migrations/2019-11-01-084701_base_tables/: down.sql  up.sql
prototypes/rust/src/: db.rs  listener.rs  main.rs  nevra.rs
(+871 files in other folders)
