[package]
name = "prototype"
version = "0.1.0"
authors = ["semtexzv <semtexzv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version ="1.4.3", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"

#kafka = { version = "0.7", default-features = false }
rdkafka = {git = "https://github.com/fede1024/rust-rdkafka", default-features=false}
actix-web = {version = "1.0.8", default-features = false , features = ["rust-tls"]}
serde = {version = "*", features = ["derive"]}

log = "0.4.8"
env_logger = "0.7.1"
lazy_static = "*"
regex = "*"
sha2 = "*"
hex = "*"
rayon = "*"
chrono = { version = "0.4.9", features = ["serde"] }


[dependencies.json]
package = "serde_json"
version = "*"